--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="css/Projet_SAE14_1.css" rel="stylesheet" type="text/css">
         <title>
-            L'escalade BITE
+            L'escalade
         </title> 
     </head>
     <body>
